2008-1-11  Zoran Vasiljevic <vasiljevic@users.sf.net>

	* fd.c: NsInitFd: do not trust getrlimit on Darwin as it
	returns bogus values (RLIM_INFINITY) for the query of
	RLIMIT_NOFILE. Instead, assume OPEN_MAX and obtain the
	value of the kernel parameter kern.maxfiles and use 
	setrlimit to set that value. This usually works good.

2007-12-26  Zoran Vasiljevic <vasiljevic@users.sf.net>

	* include/Makefile.module.in: Removed adding $(UNIXOBJS) 
	to PGM target as this results in double inclusion of
	Unix object files, once in the libnsd and once on the
	command line during the program linking. Some platforms
	(Darwin) complain about duplicate symbols in such cases.

2007-12-20  Zoran Vasiljevic <vasiljevic@users.sf.net>

	* nsd/watchdog.c: Fixed wrong test of alarm signal trigger
	that caused the watchdog to restart the worker even when 
	the worker exited regularily.

2007-12-18  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/driver.c: Fixed UDP drivers, async reads do not work
	with UDP packets, driver need to read packets as soon as possible and
	queue them instead of putting Sock into read/wait/close cycle like for TCP
	connections.

2007-12-02  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/nsd.h:
	* nsd/unix.c:
	* nsd/nsmain.c: When SIGQUIT signal is received make immediate
	shutdown by setting shutdowntimeout to 0. 

2007-12-02  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/tcljob.c: Temporary change thread name to the queueId:id during
	callback execution for easier logging. Thread name will clearly indicate which 
	job is being executed

1007-10-18  Zoran Vasiljevic <vasiljevic@users.sf.net>

	* nsd/tclconf.c: Fixed NsTclConfigObjCmd() to correctly set the
	returned value of an default boolean param to 0/1 and not just
	blindly parrot what user has given (true/false for example) as
	this could (and it does!) break Tcl expressions.

2007-11-21  Vlad Seryakov  <seryakov@users.sf.net>
	
	* nsd/driver.c: Use WideInt version of config function when reading