@@ -1,10 +1,13 @@
 2008-1-11  Zoran Vasiljevic <vasiljevic@users.sf.net>
 
-	* fd.c: NsInitFd: do not trust getrlimit on Darwin as it
+	* nsd/fd.c: NsInitFd: do not trust getrlimit on Darwin as it
 	returns bogus values (RLIM_INFINITY) for the query of
 	RLIMIT_NOFILE. Instead, assume OPEN_MAX and obtain the
 	value of the kernel parameter kern.maxfiles and use 
 	setrlimit to set that value. This usually works good.
+
+	* nsd/nsmain.c: Fix log message stating max number of
+	open files if getrlimit returns RLIM_INFINITY.
 
 2007-12-26  Zoran Vasiljevic <vasiljevic@users.sf.net>
 
